z-index fix

--- a/public/sass/_mobileNav.scss
+++ b/public/sass/_mobileNav.scss
@@ -2,7 +2,7 @@
 
 .mobile-burger {
   flex-direction: column;
-  z-index: 2;
+  z-index: 3;
   position: fixed;
   top: 0;
   right: 0;
@@ -44,7 +44,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   width: 100vw;
   height: 100vh;
   flex-direction: column;
@@ -67,6 +67,7 @@
 
 .hide-menu {
   opacity: 0;
+  pointer-events: none;
 }
 
 // RESPONSIVE
