--- a/public/style.css
+++ b/public/style.css
@@ -112,7 +112,7 @@ section {
 
 .mobile-burger {
   flex-direction: column;
-  z-index: 2;
+  z-index: 3;
   position: fixed;
   top: 0;
   right: 0;
@@ -145,7 +145,7 @@ section {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   width: 100vw;
   height: 100vh;
   flex-direction: column;
@@ -163,7 +163,8 @@ section {
   color: #f66; }
 
 .hide-menu {
-  opacity: 0; }
+  opacity: 0;
+  pointer-events: none; }
 
 @media (min-width: 1024px) {
   .mobile-burger {
